# flutter-bill-scanner

./: README.md  pubspec.yaml
.github/workflows/: dart.yml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/long_shot_app/: MainActivity.kt
ios/: Podfile
ios/Runner/: Info.plist  Runner-Bridging-Header.h
ios/Runner.xcodeproj/: project.pbxproj
lib/: display_image.dart  long_shot.dart  main.dart  permission.dart
lib/native/: native_main.dart  native_opencv.dart  scan_bill.dart
lib/widgets/: overlay.dart
lib/widgets/frame/: frame_overlay.dart
lib/widgets/overlay/: camera_guide.dart
linux/: CMakeLists.txt  my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
native_opencv/: README.md  pubspec.yaml
native_opencv/android/: CMakeLists.txt  build.gradle
native_opencv/android/src/main/: AndroidManifest.xml
native_opencv/android/src/main/kotlin/com/thanhnn16/native_opencv_plugin/native_opencv/: NativeOpencvPlugin.kt
native_opencv/android/src/test/kotlin/com/thanhnn16/native_opencv_plugin/native_opencv/: NativeOpencvPluginTest.kt
native_opencv/ios/: native_opencv.podspec
native_opencv/ios/Classes/: bill_stitching.cpp  bill_stitching.h  bill_stitching.hpp  native_opencv.cpp  stitching_detail.cpp
native_opencv/lib/: native_opencv.dart
native_opencv/test/: native_opencv_test.dart
native_opencv_windows/windows/: CMakeLists.txt
scripts/: init.sh  init_windows.ps1
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
